--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,6 +40,10 @@
 <div class="container mt-4">
     <div class="row">
         <a th:href="@{'/m/user-login'}">[Login]</a>
+        <div class="card mb-4" sec:authentication="name"></div>
+
+
+
         <div class="col-md-12 text-center">
             <a th:href="@{'/m/newthread'}" class="btn btn-primary">Start new thread</a>
         </div>
