--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,32 +19,40 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-<!--            <ul class="navbar-nav">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">xd</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">xdd</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">xddd</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">xdddd</a>-->
-<!--                </li>-->
-<!--            </ul>-->
+            <!--            <ul class="navbar-nav">-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xddd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdddd</a>-->
+            <!--                </li>-->
+            <!--            </ul>-->
         </div>
     </div>
 </nav>
 
 <div class="container mt-4">
     <div class="row">
-        <a th:href="@{'/m/user-login'}">[Login]</a>
-        <div class="card mb-4">Logged as: <span sec:authentication="name"></span></div>
 
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" class="btn btn-primary" value="Sign Out"/>
-        </form>
+        <div sec:authorize="isAnonymous()">
+            <a th:href="@{'/m/user-login'}">[Login]</a>
+        </div>
+
+
+        <div sec:authorize="isAuthenticated()">
+            <div class="card mb-4">Logged as: <span sec:authentication="name"></span>
+            </div>
+
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" class="btn btn-primary" value="Sign Out"/>
+            </form>
+        </div>
 
 
         <div class="col-md-12 text-center">
@@ -57,7 +65,7 @@
     <div class="row">
         <div class="col-md-8-center">
             <div class="card mb-4" data-level="1" th:each="thread : ${threads}">
-                <div class="card-body">
+                <div class="card-body" th:if="${!thread.isArchived()}">
                     <a th:href="@{'/m/thread/' + ${thread.id}}">
                         <h4 class="card-title" th:text="${thread.title}">Thread Title 1</h4></a>
                     <div class="thread-info">
@@ -82,7 +90,7 @@
                                 <br/>
                                 <span class="thread-id" th:text="'No.'+ ${reply.id}">ID</span>
                             </div>
-                            <h6  th:text="${reply.name}">Author Name</h6>
+                            <h6 th:text="${reply.name}">Author Name</h6>
                             <img class="reply-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
                                  th:if="${reply.getImgURL() != null && reply.getImgURL() != ''}">
                             <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
@@ -98,7 +106,7 @@
 <nav class="mt-4">
     <ul class="pagination justify-content-center">
         <li class="page-item"
-            th:each="i,stat: ${#numbers.sequence(0,threadCount/10)}">
+            th:each="i,stat: ${#numbers.sequence(0,(threadCount/10)-1)}">
             <a class="page-link" th:href="'/m/page/' + ${stat.index+1}" th:text="${stat.index + 1}">1</a>
         </li>
     </ul>
