--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
+    <meta th:name="_csrf" th:content="${_csrf.token}"/>
+    <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <title>Imageboard</title>
 </head>
@@ -98,6 +100,8 @@
                     </div>
                 </div>
                 <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary reply-button-index">Reply</a>
+
+                <button th:data-threadID="${thread.id}" id="delete-button" th:href="@{'/m/delete/' + ${thread.id}}" class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete</button>
             </div>
         </div>
     </div>
@@ -121,6 +125,38 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+const deletebuttons = document.querySelectorAll(".delete-button-index");
+deletebuttons.forEach(function (button) {
+    const threadID = button.attributes.getNamedItem("data-threadID").value;
+    button.addEventListener("click",function (){
+       if(confirm("Do you want to delete thread: " + threadID)){
+           const xhr = new XMLHttpRequest();
+
+           xhr.onreadystatechange = function() {
+               if (xhr.readyState === XMLHttpRequest.DONE) {
+                   if (xhr.status === 200) {
+                       // alert("Response: " + xhr.responseText);
+                       location.reload();
+                   } else {
+                       alert("Response: " + xhr.status);
+                   }
+               }
+           };
+
+           const elementToken = document.querySelector('meta[name="_csrf"]');
+           const token = elementToken?.getAttribute("content");
+           const elementHeader = document.querySelector('meta[name="_csrf_header"]');
+           const header = elementHeader?.getAttribute("content");
+
+           xhr.open('POST', '/m/delete/' + threadID, true);
+           xhr.setRequestHeader(header, token);
+           xhr.send();
+       }
+    });
+});
+
+</script>
 </body>
 
 </html>
