--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml"
+<html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
     <meta th:name="_csrf" th:content="${_csrf.token}"/>
     <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
-
-    <title>Imageboard</title>
+    <title>Mikuboard</title>
 </head>
 <link href="/custom.css" rel="stylesheet">
 <body>
@@ -101,7 +100,7 @@
                 </div>
                 <a th:href="@{'/m/thread/' + ${thread.id}}" class="btn btn-primary reply-button-index">Reply</a>
 
-                <button th:data-threadID="${thread.id}" id="delete-button" th:href="@{'/m/delete/' + ${thread.id}}" class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete</button>
+                <button th:data-threadID="${thread.id}" id="delete-button" class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete</button>
             </div>
         </div>
     </div>
@@ -155,7 +154,6 @@ deletebuttons.forEach(function (button) {
        }
     });
 });
-
 </script>
 </body>
 
