--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -114,52 +114,9 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    const targetDiv = document.getElementById("replyBox");
-    const btn = document.getElementById("replyButton");
-    targetDiv.style.display = "none";
 
-    btn.onclick = function () {
-        if (targetDiv.style.display !== "none") {
-            targetDiv.style.display = "none";
-        } else {
-            btn.style.display = "none";
-            targetDiv.style.display = "block";
-        }
-    };
-</script>
-<script>
-    const deletebuttons = document.querySelectorAll(".delete-button-index");
-    deletebuttons.forEach(function (button) {
-        const postID = button.attributes.getNamedItem("data-postID").value;
-        button.addEventListener("click", function () {
-            if (confirm("Do you want to delete post: " + postID)) {
-                const xhr = new XMLHttpRequest();
-
-                xhr.onreadystatechange = function () {
-                    if (xhr.readyState === XMLHttpRequest.DONE) {
-                        if (xhr.status === 200) {
-                            // alert("Response: " + xhr.responseText);
-                            location.reload();
-                        } else {
-                            alert("Response: " + xhr.status);
-                        }
-                    }
-                };
-
-                const elementToken = document.querySelector('meta[name="_csrf"]');
-                const token = elementToken?.getAttribute("content");
-                const elementHeader = document.querySelector('meta[name="_csrf_header"]');
-                const header = elementHeader?.getAttribute("content");
-
-                xhr.open('POST', '/m/delete/' + postID, true);
-                xhr.setRequestHeader(header, token);
-                xhr.send();
-            }
-        });
-    });
-</script>
-
+<script src="/ReplyBoxShowFunction.js"></script>
+<script src="/PostDeleteButtonFunction.js"></script>
 </body>
 
 </html>
