--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -86,8 +86,8 @@
                     <p class="card-text" th:text="${thread.replies[0].getDescription()}">Thread Description</p>
                 </div>
             </div>
-
             <div class="col-md-12">
+                <button th:data-threadID="${thread.id}" id="thread-delete-button" class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete</button>
                 <h2 class="text-center bare-text">Replies</h2>
                 <div class="row">
 
@@ -96,8 +96,10 @@
                             <div class="thread-info">
                                 <span class="thread-id" th:text="${reply.id}">ID</span>
                                 <span th:text="'Date: ' + ${#temporals.format(reply.date, 'dd/MMM/yyyy HH:mm:ss')}"></span>
-                                <button th:data-replyID="${reply.id}" id="delete-button"
-                                        class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete
+                                <button th:data-replyID="${reply.id}" id="reply-delete-button"
+                                        class="btn btn-primary delete-button-threadpage"
+                                        sec:authorize="isAuthenticated()">
+                                    Delete
                                 </button>
                             </div>
                             <h5 class="card-title" th:text="${reply.name}">Author Name 1</h5>
@@ -114,9 +116,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/ThreadPage.js"></script>
 
-<script src="/ReplyBoxShowFunction.js"></script>
-<script src="/PostDeleteButtonFunction.js"></script>
 </body>
 
 </html>
