--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -64,7 +64,9 @@
         </div>
     </div>
 </div>
-
+<footer class="bg-dark text-white text-center py-3 mt-5">
+    Mikuboard &copy; 2023
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
