--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -35,8 +35,8 @@
     </div>
 </nav>
 
-<body>
-<div class="container mt-4">
+<body class="d-flex flex-column min-vh-100">
+<div class="container mt-4 flex-grow-1">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Administrator Login</h2>
