--- a/src/main/resources/templates/newThread.html
+++ b/src/main/resources/templates/newThread.html
@@ -8,7 +8,7 @@
     <link href="/custom.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand" href="/m">
@@ -36,7 +36,7 @@
     </div>
 </nav>
 
-<div class="container mt-4">
+<div class="container mt-4 flex-grow-1">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2 class="text-center">Submit Thread</h2>
