--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -11,7 +11,7 @@
     <meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 
-<body th:data-archived="${thread.isArchived ? 1:0 }">
+<body class="d-flex flex-column min-vh-100" th:data-archived="${thread.isArchived ? 1:0 }">
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand" href="/m">
@@ -39,7 +39,7 @@
     </div>
 </nav>
 
-<div class="container mt-4">
+<div class="container mt-4 mt-4 flex-grow-1">
     <div class="card mb-4" id="replyBox">
         <div class="card-body">
             <form method="post" th:action="${'/m/submit/' + thread.id}" enctype="multipart/form-data" th:object="${replyData}">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 flex-grow-1">
 
             <div class="col-md-12 text-center">
                 <a class="btn btn-primary reply-button-index" id="replyButton">Reply</a>
@@ -83,7 +83,10 @@
                         <span class="page" th:text="'Page: ' + ${pageNumber}"></span>
                     </div>
                     <img class="thread-image" th:src="${thread.replies[0].getImgURL()}" alt="Sample Image"
-                         th:if="${thread.replies[0].getImgURL() != null && thread.replies[0].getImgURL() != ''}">
+                         th:if="${thread.replies[0].getImgURL() != null && thread.replies[0].getImgURL().endsWith('.jpg')}" src="">
+                    <video controls class="thread-video" th:src="${thread.replies[0].getImgURL()}"
+                           th:if="${thread.replies[0].getImgURL() != null && (thread.replies[0].getImgURL().endsWith('.webm')
+                         || thread.replies[0].getImgURL().endsWith('.mp4') || thread.replies[0].getImgURL().endsWith('.mov'))}" src=""></video>
                     <p class="card-text" th:text="${thread.replies[0].getDescription()}">Thread Description</p>
                 </div>
             </div>
@@ -91,23 +94,26 @@
                 <button th:data-threadID="${thread.id}" id="thread-delete-button" class="btn btn-primary delete-button-index" sec:authorize="isAuthenticated()">Delete</button>
                 <h2 class="text-center bare-text">Replies</h2>
                 <div class="row">
-
-                    <div class="card mb-4" th:each="reply : ${thread.replies}" th:if="${reply != thread.replies[0]}">
-                        <div class="card-body">
-                            <div class="thread-info">
-                                <span class="thread-id" th:text="${reply.id}">ID</span>
-                                <span th:text="'Date: ' + ${#temporals.format(reply.date, 'dd/MMM/yyyy HH:mm:ss')}"></span>
-                                <button th:data-replyID="${reply.id}" id="reply-delete-button"
-                                        class="btn btn-primary delete-button-threadpage"
-                                        sec:authorize="isAuthenticated()">
-                                    Delete
-                                </button>
+                        <div class="card mb-4" th:each="reply,stats: ${thread.replies}"
+                             th:if="${reply != thread.replies[0] && stats.index &lt; 4}">
+                            <div class="card-body">
+                                <div class="thread-info">
+                                    <span th:text="'Date: ' + ${#temporals.format(reply.date, 'dd/MMM/yyyy HH:mm:ss')}"></span>
+                                    <span class="thread-id" th:text="'No.'+ ${reply.id}">ID</span>
+                                    <button th:data-replyID="${reply.id}" id="reply-delete-button"
+                                            class="btn btn-primary delete-button-threadpage"
+                                            sec:authorize="isAuthenticated()">
+                                        Delete
+                                    </button>
+                                </div>
+                                <h6 th:text="${reply.name}">Author Name</h6>
+                                <img class="reply-image" th:src="${reply.getImgURL()}" alt="Sample Image"
+                                     th:if="${reply.getImgURL() != null && reply.getImgURL().endsWith('.jpg')}" src="">
+                                <video controls class="reply-video" th:src="${reply.getImgURL()}"
+                                       th:if="${reply.getImgURL() != null && (reply.getImgURL().endsWith('.webm')
+                         || reply.getImgURL().endsWith('.mp4') || reply.getImgURL().endsWith('.mov'))}" src=""></video>
+                                <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
                             </div>
-                            <h5 class="card-title" th:text="${reply.name}">Author Name 1</h5>
-                            <img class="reply-image" th:src="${reply.imgURL}" alt="Answer Image" src="#"
-                                 th:if="${reply.getImgURL() != null && reply.getImgURL() != ''}">
-                            <p class="card-text" th:text="${reply.description}">Answer Description 1</p>
-                        </div>
                     </div>
 
                 </div>
