--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,6 +122,9 @@
     <div class="col-md-12 text-center">
         <a th:href="@{'/m/catalog'}" class="btn btn-primary">Catalog</a>
     </div>
+    <div class="col-md-12 text-center">
+        <a th:href="@{'/m/archive'}" class="btn btn-primary">Archive</a>
+    </div>
 </nav>
 
 
