--- a/src/main/resources/templates/archive.html
+++ b/src/main/resources/templates/archive.html
@@ -7,9 +7,36 @@
     <title>Archive</title>
     <!-- Bootstrap CSS link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="/custom.css" rel="stylesheet">
 </head>
-<link href="/custom.css" rel="stylesheet">
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/m">
+            <img src="/title.png" alt="..." height="75"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!--            <ul class="navbar-nav">-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xddd</a>-->
+            <!--                </li>-->
+            <!--                <li class="nav-item">-->
+            <!--                    <a class="nav-link" href="#">xdddd</a>-->
+            <!--                </li>-->
+            <!--            </ul>-->
+        </div>
+    </div>
+</nav>
+
 <div class="container mt-5">
     <h1 style="color:white">/m/ Archive</h1>
     <table class="table table-striped">
